[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/PushPreviewUnit.gd" type="Script" id=1]
[ext_resource path="res://images/units/archer.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "PushPreview"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PushPreviewUnitSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.368627 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PushPreviewUnit" type="Node2D" groups=[
"push_preview_unit",
]]
script = ExtResource( 1 )

[node name="PushPreviewLine" type="Line2D" parent="."]
position = Vector2( 16, 16 )
scale = Vector2( 1, 1 )
width = 8.0
default_color = Color( 1, 0.737255, 0.4, 1 )

[node name="PushPreviewUnitSprite" type="Sprite" parent="."]
position = Vector2( 16, 8 )
scale = Vector2( 0.66, 0.66 )
z_index = 5
texture = ExtResource( 2 )

[node name="PushPreviewPlayer" type="AnimationPlayer" parent="."]
anims/PushPreview = SubResource( 1 )
